Integrate improved AirPlace logic with auto-rotation and inventory fixes to 1.21.10